--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#D84315</color>
     <color name="colorAccent">#FFD600</color>
     <color name="White">#FFFFFF</color>
+    <color name="beige">#E8DDD3</color>
 </resources>
