--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -4,8 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EEEEEE"
+    android:background="@color/beige"
     android:layoutDirection="rtl"
+    android:id="@+id/relativeLayout_chat_activity"
+    android:clickable="true"
     tools:context=".ChatActivity">
 
 
@@ -122,42 +124,50 @@
         android:id="@+id/recycler_view_messages"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/appBarLayout"
         android:layout_above="@+id/relativeLayout_message"
-        />
+        android:layout_below="@+id/appBarLayout"
+        android:clickable="true" />
 
     <RelativeLayout
         android:id="@+id/relativeLayout_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:paddingTop="8dp"
 
         >
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_send_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            app:srcCompat="@drawable/ic_image_black_24dp"
-            android:tint="@color/colorPrimaryDark"
-            app:fabSize="mini"/>
+
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/editText_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp"
             android:padding="8dp"
             android:paddingEnd="40dp"
-            android:layout_toEndOf="@+id/fab_send_image"
+            android:paddingStart="50dp"
             android:background="@drawable/rect_oval_white"
             android:elevation="2dp"
+            android:maxLines="5"
             android:hint="أكتب رسالة..."
              />
+        <ImageButton
+            android:id="@+id/fab_send_image"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="10dp"
+            app:srcCompat="@drawable/ic_attachment_black_24dp"
+            android:tint="@color/White"
+            android:elevation="2dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:background="@drawable/rect_oval_prmary_color"
+            />
 
         <ImageView
             android:id="@+id/imageView_send"
@@ -172,5 +182,7 @@
 
 
     </RelativeLayout>
+
+
 
 </RelativeLayout>
